Add database support and enhance command processing with usage tracking